--- a/styles/about_me.module.css
+++ b/styles/about_me.module.css
@@ -38,20 +38,21 @@
   direction: ltr;
 }
 .resume button {
-    background-color: rgb(241, 65, 86);
-    border: none;
-    color: rgb(234, 233, 239);
-    padding: 1rem;
-    border-radius: 20px;
-    font-size: 1.2rem;
-    font-weight: 600;
-  }
-  .resume button:hover {
-    background-color: rgba(241, 65, 86,0.7);
-  }
+  background-color: rgb(241, 65, 86);
+  border: none;
+  color: rgb(234, 233, 239);
+  padding: 1rem;
+  border-radius: 20px;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.resume button:hover {
+  background-color: rgba(241, 65, 86, 0.7);
+}
 .progressContainer {
   width: 48%;
 }
+
 @media (max-width: 768px) {
   .Ttemscontainer {
     flex-direction: column;
@@ -69,14 +70,11 @@
     align-items: center;
   }
   .resume {
-    
     width: 80%;
     border-bottom: 1px solid #cbced1;
     padding-bottom: 2vh;
   }
-
   .progressContainer {
-    
     width: 80%;
   }
 }
