--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 3vh 0;
 }
 .ItemsContainer {
   display: flex;
@@ -33,4 +34,5 @@
 }
 .iconContainer svg:hover{
    color: #fff; 
+   
 }
