comment and prettier

--- a/styles/about_me.module.css
+++ b/styles/about_me.module.css
@@ -37,11 +37,11 @@
 .resume p {
   direction: ltr;
 }
-
 .progressContainer {
   width: 48%;
 }
 
+/* tablet and mobile and small monitor */
 @media (max-width: 1000px) {
   .Ttemscontainer {
     flex-direction: column;
