--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css');
+@import url("https://cdn.fontcdn.ir/Font/Persian/Vazir/Vazir.css");
 
 html,
 body {
@@ -7,7 +7,7 @@ body {
   overflow-x: hidden;
   background-color: rgb(234, 233, 239);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif ,Vazir;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif, Vazir;
 }
 
 a {
