--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -5,9 +5,8 @@
   padding: 0 3vw;
   align-items: center;
   justify-content: space-between;
- border-bottom: 1px solid rgba(234, 233, 239,0.2);
- position:fixed;
- width: 100vw;
- z-index: 1;
+  border-bottom: 1px solid rgba(234, 233, 239, 0.2);
+  position: fixed;
+  width: 100vw;
+  z-index: 1;
 }
-
