--- a/styles/about_me.module.css
+++ b/styles/about_me.module.css
@@ -8,7 +8,7 @@
   font-size: 1.7rem;
   width: 92vw;
   text-align: left;
-  padding: 1rem 0;
+  padding: 6rem 0 1rem 0;
 }
 .Ttemscontainer {
   display: flex;
@@ -43,6 +43,7 @@
 
 /* tablet and mobile and small monitor */
 @media (max-width: 1000px) {
+  
   .Ttemscontainer {
     flex-direction: column;
     align-items: center;
@@ -65,5 +66,12 @@
   }
   .progressContainer {
     width: 80%;
+  }
+}
+
+@media (max-width: 1200px){
+  .container h1 {
+    padding: 3rem 0 0 0;
+    margin-bottom: 0;
   }
 }
