--- a/styles/posts.module.css
+++ b/styles/posts.module.css
@@ -7,7 +7,7 @@
   font-size: 1.7rem;
   width: 92vw;
   text-align: left;
-  padding: 1rem 0;
+  padding: 6rem 0 1rem 0;
   color: #42474b;
 }
 .cards_container {
@@ -42,4 +42,11 @@
 }
 .card_container span {
   color: rgba(241, 65, 86, 0.7);
+}
+
+@media (max-width: 1200px){
+  .posts_container h1 {
+    padding: 3rem 0 0 0;
+    margin-bottom: 0;
+  }
 }
