--- a/styles/works.module.css
+++ b/styles/works.module.css
@@ -7,7 +7,7 @@
   font-size: 1.7rem;
   width: 92vw;
   text-align: left;
-  padding: 1rem 0;
+  padding: 6rem 0 1rem 0;
   color: #42474b;
 }
 .cards_container {
@@ -36,4 +36,11 @@
 .card_container h2 {
   color: #42474b;
   font-size: 1.5rem;
+}
+
+@media (max-width: 1200px){
+  .works_container h1 {
+    padding: 3rem 0 0 0;
+    margin-bottom: 0;
+  }
 }
