--- a/styles/about_me.module.css
+++ b/styles/about_me.module.css
@@ -5,7 +5,7 @@
   color: #42474b;
 }
 .container h1 {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   width: 92vw;
   text-align: left;
   padding: 6rem 0 1rem 0;
@@ -33,6 +33,7 @@
 }
 .resume p {
   direction: ltr;
+  font-size: .9rem;
 }
 .progressContainer {
   width: 48%;
