--- a/styles/experience.module.css
+++ b/styles/experience.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
 }
 .container h1 {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
   width: 92vw;
   text-align: left;
   padding: 6rem 0 1rem 0;
@@ -16,7 +16,7 @@
   justify-content: center;
 }
 .card_container {
-  width: 550px;
+  width: 450px;
   border-radius: 16px;
   align-items: center;
   justify-content: center;
@@ -47,15 +47,15 @@
   border-left: 1px solid rgb(241, 65, 86);
   padding: 1rem;
   color: #6e767c;
-  font-size: 1.2rem;
+  font-size: .8rem;
 }
 .detail_container h2 {
   color: #42474b;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 @media (max-width: 768px) {
   .card_container {
-    width: 86vw;
+    width: 80vw;
   }
 }
 
