--- a/styles/home_sec.module.css
+++ b/styles/home_sec.module.css
@@ -15,11 +15,11 @@
   margin-top: 16vh;
 }
 .container h1 {
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   margin: 1.5rem 0 1rem 0;
 }
 .container h3 {
-  font-size: 1.2rem;
+  font-size: .8rem;
   margin-top: 6px;
   font-weight: 400;
   color: rgba(234, 233, 239, 0.8);
