--- a/styles/experience.module.css
+++ b/styles/experience.module.css
@@ -42,6 +42,7 @@
 .icon_date_container p {
   padding-left: 2rem;
   color: #6e767c;
+  width: 400px;
 }
 .detail_container {
   border-left: 1px solid rgb(241, 65, 86);
