--- a/styles/home_sec.module.css
+++ b/styles/home_sec.module.css
@@ -19,7 +19,7 @@
   margin: 1.5rem 0 1rem 0;
 }
 .container h3 {
-  font-size: .8rem;
+  font-size: 0.8rem;
   margin-top: 6px;
   font-weight: 400;
   color: rgba(234, 233, 239, 0.8);
@@ -32,4 +32,69 @@
 }
 .iconContainer svg:hover {
   color: #fff;
+}
+
+.stone {
+  position: absolute;
+  width: 2px;
+  height: 80px;
+  background-image: linear-gradient(to top, #dcdde4, transparent);
+  box-shadow: 0 4px 94px #cdd1ee;
+  top: 100px;
+  left: 6vw;
+  opacity: 0;
+  border-radius: 50px;
+  animation: stone 5s ease 0s infinite;
+}
+@keyframes stone {
+  from {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(90%);
+    opacity: 0;
+  }
+}
+
+/* stone animation */
+.stone:nth-child(2) {
+  top: 10vh;
+  left: 45vw;
+  animation-delay: 0.3s;
+  animation-duration: 5s;
+}
+.stone:nth-child(3) {
+  top: 30vh;
+  left: 15vw;
+  animation-delay: 1s;
+  animation-duration: 3s;
+}
+.stone:nth-child(4) {
+  top: 35vh;
+  left: 35vw;
+  animation-delay: 0.7s;
+  animation-duration: 2s;
+}
+.stone:nth-child(5) {
+  top: 25vh;
+  left: 70vw;
+  animation-delay: 0s;
+  animation-duration: 3s;
+}
+.stone:nth-child(6) {
+  top: 45vh;
+  left: 80vw;
+  animation-delay: 0.1s;
+  animation-duration: 5s;
+}
+.stone:nth-child(7) {
+  top: 30vh;
+  left: 90vw;
+  animation-delay: 0.1;
+  animation-duration: 5s;
+}
+.stone:nth-child() {
+  background-image: linear-gradient(to top, #384fde, transparent);
+  box-shadow: 0 4px 94px #384fde;
 }
