--- a/src/components/cards/work_card.module.css
+++ b/src/components/cards/work_card.module.css
@@ -6,14 +6,59 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    padding:0 0 2rem 0;
     margin: 1.3rem;
     background-color: #fff;
     box-shadow: 3px 3px 10px #cbced1;
+    position: relative;
+    z-index: 1;
   }
-  .card_container h2 {
+  .card_container:before {
+    content: "";
+    position: absolute;
+    background-color: rgba(68, 67, 112,.7);;
+    top: 100%;
+    width: 100%;
+    left: auto;
+    height: 0;
+    z-index: -1;
+    opacity: 0.9;
     color: #42474b;
-    font-size: 1.1rem;
+    transition: all ease 0.5s;
+    border-radius: 1rem;
+  }
+  .card_container:hover > h2 {
+    color: #fff;
+    bottom: 80px;
+    transition: all .5s linear;
+  }
+  
+  .card_container:hover:before {
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
+/* .card_container:hover+ .card_container h2 {
+    top: -100px;
+    opacity: 1;
+    transition: all 1.5s linear;
+  } */
+
+  /* .card_container h2:hover {
+    color: #fff;
+    position: relative;
+   
+  } */
+
+
+
+  .card_container h2 {
+  
+   position: relative;
+    bottom:0;
+    font-size: 1rem;
+    text-align: center;
+    
   }
   .card_container a{
     text-align: left;
@@ -26,3 +71,11 @@
   .card_container a:hover{
     color: #054b9b;
   }
+
+  .img_container{
+    position: relative;
+border-radius: 1rem;
+    height: 200px;
+    
+  }
+
