--- a/src/components/cards/my_slide.module.css
+++ b/src/components/cards/my_slide.module.css
@@ -1,7 +1,5 @@
 .sliders_container {
   width: 40vw;
-  background: linear-gradient(-45deg, rgb(68, 67, 112), #fff);
-  box-shadow: 3px 3px 10px #cbced1;
 }
 .image_container {
   align-items: center;
@@ -9,6 +7,8 @@
   display: flex;
   width: 35vw;
   padding: 1rem;
+  border-radius: 1rem;
+  border: 1px solid rgb(187, 186, 186);
   height: calc(300px + 2rem);
 }
 
