--- a/src/components/shared/header.module.css
+++ b/src/components/shared/header.module.css
@@ -1,9 +1,8 @@
 .container {
   background-color: #444370;
-  height: 12vh;
   color: rgb(234, 233, 239);
   display: flex;
-  padding: 0 3vw;
+  padding: 1.2rem 3vw;
   align-items: center;
   border-bottom: 1px solid rgba(234, 233, 239, 0.2);
   position: fixed;
