--- a/src/components/cards/work_card.module.css
+++ b/src/components/cards/work_card.module.css
@@ -30,6 +30,7 @@
   color: #fff;
   bottom: 80px;
   transition: all 0.5s linear;
+  cursor: pointer;
 }
 .card_container:hover:before {
   top: 0;
@@ -42,21 +43,5 @@
   bottom: 0;
   font-size: 1rem;
   text-align: center;
-}
-.card_container a {
-  text-align: left;
-  width: 100%;
-  font-size: 0.8rem;
-  font-weight: 600;
-  color: #0969da;
-  padding: 0.5rem 0;
-}
-.card_container a:hover {
-  color: #054b9b;
-}
-
-.img_container {
-  position: relative;
-  border-radius: 1rem;
-  height: 200px;
+  cursor: pointer;
 }
